# Proyecto-de-Grado_-Seminario-de-Grado

./: Readme.MD  pyproject.toml
Cuadernos/: Ingesta.ipynb  Transformacion_Columnas.pkl
